<resources>
    <string name="app_name">Gratify</string>
    <string name="logo">&#xf219;</string>
    <string name="name_com">Gratify</string>
    <string name="user">&#xf2c0;</string>
    <string name="paswd">&#xf13e;</string>
    <string name="submit">Submit</string>
    <string name="new_user">Are You New User</string>
    <string name="usr_name">User name</string>
    <string name="passwd">Password</string>
    <string name="new_loign_name">&#xf252;</string>
</resources>
