<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="#4682B4"
    tools:context="com.example.balarajum.appxml.MainActivity">
    <TextView
        android:layout_marginTop="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="60dp"
        android:id="@+id/logo_text"
        android:text="@string/logo"
        android:textColor="@android:color/white"
        android:gravity="center"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/name"
        android:layout_below="@id/logo_text"
        android:text="@string/name_com"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        android:gravity="center"
        android:textSize="40dp"
        />
    <LinearLayout
        android:gravity="center_horizontal"
        android:layout_marginTop="100dp"
        android:layout_width="300dp"
        android:layout_marginLeft="20dp"
        android:layout_height="wrap_content"
        android:id="@+id/liner"
        android:orientation="vertical"
        android:layout_below="@id/name">
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user"
                android:id="@+id/username"
                android:textColor="@android:color/white"
                />
            <EditText
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:hint="@string/usr_name"
                android:textColorHint="@android:color/white"
                android:textColor="@android:color/white"/>
        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/paswd"
                android:id="@+id/password"
                android:textColor="@android:color/white"
                />
            <EditText
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:hint="@string/passwd"
                android:textColorHint="@android:color/white"
                android:textColor="@android:color/white"/>
        </LinearLayout>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/submit"
            android:background="#00FFFF"
            android:textColor="#fff"
            android:layout_marginTop="30dp"
            />
    </LinearLayout>
    <TextView
        android:layout_below="@id/liner"
        android:gravity="bottom|center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/new_user"
        android:textColor="@android:color/white"
        android:layout_alignParentBottom="true"
        />
</RelativeLayout>
